<resources>
    <string name="app_name">Weather App</string>

    <string name="day_status">Clear</string>
    <string name="language">Language</string>
    <string name="system_default">System default</string>
    <string name="select_language">Select Language</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_english">English</string>
    <string name="location">Location</string>
    <string name="location_method">Location method</string>
    <string name="location_gps">GPS</string>
    <string name="location_map">Map</string>
    <string name="temperature_celsius">Celsius</string>
    <string name="temperature_kelvin">Kelvin</string>
    <string name="temperature_fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_speed_unit">Wind Speed unit</string>
    <string name="wind_speed_MS">Meter / Second</string>
    <string name="wind_speed_MH">Mile / Hour</string>
    <string name="notification">Notification</string>
    <string name="notification_enabled">Enabled</string>
    <string name="notification_disabled">Disabled</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="cloud">Cloud</string>
    <string name="wind_degree">Wind degree</string>
    <string name="humidity_cardView">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="temperature_celsius_unit"> °C</string>
    <string name="temperature_kelvin_unit">" °K"</string>
    <string name="temperature_fahrenheit_unit"> °F</string>
    <string name="wind_speed_unit_MS"> m/s</string>
    <string name="wind_speed_unit_MH"> m/h</string>
    <string name="meter"> m</string>
    <string name="pressure_unit"> hPa</string>
    <string name="weather_description">Weather</string>
    <string name="probability_precipitation">Probability Rain</string>
    <string name="moon_phase">Moon Phase</string>
    <string name="new_moon">New Moon</string>
    <string name="first_quarter">First Quarter</string>
    <string name="full_moon">Full Moon</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="no_favorite">No Favorite Places yet</string>
    <string name="no_alerts">No Alerts yet</string>
    <string name="alert_from">From</string>
    <string name="alert_to">To</string>
    <string name="alarm">Alarm</string>
    <string name="alert">Alert</string>
    <string name="alert_save_button">Save</string>
    <string name="undefined_place">Undefined Place</string>
    <string name="enable_gps">Please Enable GPS</string>
    <string name="enable">Enable</string>
    <string name="waiting_enable_gps">Waiting you to enable GPS to get your location</string>
    <string name="error_network">No internet Founded</string>

    <string name="PM">PM</string>
    <string name="AM">AM</string>
    <string name="alert_start_time_error">Start date must be  after current date</string>
    <string name="alert_end_time_error">End date must be after start date</string>
    <string name="error_network_for_update">No internet Founded to update your information</string>

    <string name="no_alert">Weather is fine,No Alerts for this time</string>
    <string name="rain_alert">Rain</string>
    <string name="wind_alert">Wind</string>
    <string name="avalanches_alert">Avalanches</string>
    <string name="forest_fire_alert">Fire warning</string>
    <string name="other_alert">Rain and Wind</string>
    <string name="add_new_alert">add new alert</string>
    <string name="waiting_image">Waiting</string>
    <string name="loading_bar">loading bar</string>
    <string name="add_favorite_place">add favorite place</string>
    <string name="enable_internet">enable Internet at your first time</string>
    <string name="open_setting">Open setting and give us permission</string>
    <string name="action_settings">Settings</string>
    <string name="wait">Waiting you to give us permission to access location</string>
    <string name="status_of_day">status of day</string>
    <string name="remove_alert">remove alert</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="delete_alert">Are you sure you want delete this Alert?</string>
    <string name="delete_place">Are you sure you want delete this Place?</string>
    <string name="no_place_selected">Please select place first</string>
    <string name="start_time">2:25 AM</string>
    <string name="start_date">7 Aug 1999</string>
    <string name="end_time">3:25 PM</string>
    <string name="end_date">1 Nov 202</string>


    <string-array name="pref_notification">
        <item>@string/notification_enabled</item>
        <item>@string/notification_disabled</item>
    </string-array>

    <string-array name="pref_notification_codes">
        <item>true</item>
        <item>false</item>
    </string-array>

    <string-array name="pref_language_names">
        <item>@string/system_default</item>
        <item>@string/language_arabic</item>
        <item>@string/language_english</item>
    </string-array>

    <string-array name="pref_language_codes">
        <item>auto</item>
        <item>ar</item>
        <item>en</item>
    </string-array>

    <string-array name="pref_temperature_names">
        <item>@string/temperature_celsius</item>
        <item>@string/temperature_kelvin</item>
        <item>@string/temperature_fahrenheit</item>
    </string-array>

    <string-array name="pref_temperature_codes">
        <item>celsius</item>
        <item>kelvin</item>
        <item>fahrenheit</item>
    </string-array>

    <string-array name="pref_wind_names">
        <item>@string/wind_speed_MS</item>
        <item>@string/wind_speed_MH</item>
    </string-array>

    <string-array name="pref_wind_codes">
        <item>M/S</item>
        <item>M/H</item>
    </string-array>

</resources>
