<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingTop="@dimen/_15sdp"
    tools:context=".alert.view.AlertFragment">

    <ImageView
        android:id="@+id/no_alerts_imageView"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/no_alert"
        android:src="@drawable/ic_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_alerts_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_alerts"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_alerts_imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_alerts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/custom_row_alert" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_alerts_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        android:backgroundTint="#038DFB"
        android:contentDescription="@string/add_new_alert"
        android:scaleType="center"
        app:fabCustomSize="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_alert" />

</androidx.constraintlayout.widget.ConstraintLayout>